--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,7 @@ Control.system-ca-bundle
 GitHub.sublime-settings 
 
 # Visual Studio Code # 
+.vscode
 .vscode/* 
 !.vscode/settings.json 
 !.vscode/tasks.json 
@@ -137,4 +138,4 @@ GitHub.sublime-settings
 .history
 
 .env
-virtenv/
+virtenv
